# cpp_babel

./: .gitignore  Babel.sln  CMakeLists.txt  Project2.opensdf  Project2.sln
Babel/: Babel.vcxproj  Babel.vcxproj.filters  BabelClient.cpp  BabelClient.hpp  BabelServer.cpp  BabelServer.hpp  ClassDiagram.cd  Contact.hpp  ISocket.cpp  ISocket.h  Identity.hpp  MutexVault.cpp  Packet.cpp  Packet.h  Rsa.cpp  Rsa.h  Source.cpp
Babel/Linux/: LinuxSocket.cpp  LinuxSocket.h  Makefile  babel_test.cpp  babel_test_client.cpp  babel_test_client_stash.cpp  babel_test_server.cpp  babel_test_server_stash.cpp  client.cpp  main.cpp
Babel/Sound/: EncodeManager.cpp  EncodeManager.hpp  IAudio.hpp  IEncode.hpp  SoundManager.cpp  SoundManager.hpp
Babel/Windows/: WinCriticalSession.hpp  WinMutex.hpp  WinSocket.cpp  WinSocket.h  WinSocket.hpp  WinThread.hpp
ModelingProject2/ModelDefinition/: ModelingProject2.uml
Project2/: ISocket.cpp  ISocket.h  IThread.h  IThread.hpp  MutexVault.cpp  MutexVault.hpp  Packet.h  Project2.vcxproj  Project2.vcxproj.filters  Socket.hpp  Source.cpp  WinMutex.hpp  WinSocket.hpp  WinThread.hpp  packet_test.cpp
Project2/Linux/: LinuxMutex.hpp  LinuxSocket.cpp  LinuxSocket.h  LinuxThread.hpp  client.cpp  main.cpp
project_Babel/: calling.h  connect.ui  connexion.h  home.cpp  incomingcall.h  mainpage.ui  start.h  start.ui
release_babel/: object_script.Babel.Debug  object_script.Babel.Release  ui_incomingcall.h
sound/: EncodeManager.cpp  EncodeManager.hpp  IAudio.hpp  Makefile  SoundManager.cpp  SoundManager.cpp~  SoundManager.hpp  Test  main.cpp  portaudio.h
(+31 files in other folders)
